# wikipedia-search

./: .env.example  .gitignore  JOURNAL.md  README.md  package-lock.json  package.json  pyproject.toml  slides.md  style.css
agent/: env.py  main.py  prompt.py  trace.py  wikipedia.py
claude-history-bundle/: README.md  manifest.json
claude-history-bundle/conversations/: 0babd536-b390-4809-abb2-e31c9314d098.jsonl  1b3f281d-cdec-4ff9-83f6-54370963330e.jsonl  269d0e4f-7a37-41c5-9e19-68c20171d6aa.jsonl  56338231-f9fa-4059-a54d-8140d466355e.jsonl  7439aa96-46b9-43cb-a85d-9a6727f221c1.jsonl  a8ab077a-d484-4122-b485-140760c77dcc.jsonl  b558f95c-5615-4d2b-8d47-009bd695f939.jsonl  ca1cb8e8-ffe8-43a8-9808-0b4b93b483d1.jsonl
claude-history-bundle/conversations/0babd536-b390-4809-abb2-e31c9314d098/subagents/: agent-a5c0828d8f7185bd0.jsonl  agent-a5c0828d8f7185bd0.meta.json  agent-a8d1dfd80536cce86.jsonl  agent-a8d1dfd80536cce86.meta.json  agent-ad3c5fe08b5dfe516.jsonl  agent-ad3c5fe08b5dfe516.meta.json
claude-history-bundle/conversations/56338231-f9fa-4059-a54d-8140d466355e/subagents/: agent-ac679ea7a0db7f090.jsonl  (+1 more)
docs/: DESIGN.md  EVAL_REPORT.md  SUBMISSION_BRIEF.md
eval_results/2026-05-22T18-22-42_07b1e15-dirty/: results.json
eval_results/2026-05-22T18-52-16_07b1e15-dirty/: results.json
eval_results/2026-05-22T19-11-51_07b1e15-dirty/: results.json
eval_results/2026-05-22T20-06-24_073937c-dirty/: results.json
eval_results/entity_coverage_2026-05-22T19-37-10_07b1e15-dirty/: entity_coverage_retro.json
evals/: cases.py  grading.py  regrade_traces.py  run_evals.py
(+10 files in other folders)
