[project]
name = "wikipedia-agent"
version = "0.1.0"
description = "A Wikipedia-search agent built directly on the Anthropic API, with an eval harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "spacy>=3.8.14",
    "en-core-web-sm",
]

[tool.uv]
package = false

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
